--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.1",
     "uuid": "^11.1.0"
