--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.1",
+    "razorpay": "^2.9.6",
+    "resend": "^4.5.1",
+    "stripe": "^18.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
